JT-2997 Fix nearby homes link style, remove extra margin above search bar on desktop

--- a/app/assets/stylesheets/pages/district-boundaries/_district_boundaries_page.scss
+++ b/app/assets/stylesheets/pages/district-boundaries/_district_boundaries_page.scss
@@ -101,6 +101,32 @@
       color: #2ba3dc;
     }
   }
+
+  .icon {
+    font-size: 18px;
+    color: #c1d2d9;
+    margin-right: 5px;
+    &.active {
+      color: #2ba3dc;
+    }
+  }
+
+  .icontext {
+    display: none;
+    font-family: 'opensans-regular';
+    font-size: 12px;
+    @include media-breakpoint-only(sm) {
+      display: inline-block;
+    }
+  }
+
+  .icon-house {
+    padding-top: 5px;
+    font-size: 14px;
+    > a {
+      font-size: 12px;
+    }
+  }
 }
 
 #district-boundaries-page ~ footer {
