--- a/app/assets/stylesheets/pages/district-boundaries/_filter-bar.scss
+++ b/app/assets/stylesheets/pages/district-boundaries/_filter-bar.scss
@@ -14,6 +14,9 @@
         display: block;
         font-family: 'opensans-semibold';
         font-size: 14px;
+        @include media-breakpoint-up(md) {
+          margin: 0 0 10px 0;
+        }
       }
 
       .spinny-wheel-container {
@@ -66,6 +69,12 @@
         @include media-breakpoint-down(sm) {
           width: 100%; //
           border-right-width: 1px;
+        }
+      }
+
+      > .icon-house {
+        @include media-breakpoint-down(sm) {
+          display: none;
         }
       }
     }
